welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:13: error: ')' expected but 'if' found.
				if ((getDirection() == Direction.OUEST) && (estFaceMur){
                                ^SnakeBuggle:18: error: ')' expected but '}' found.
			}
                        ^